--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>https://mit-license.org/</url>
+            <url>LICENSE.md</url>
         </license>
     </licenses>
     <organization>
